--- a/index.html
+++ b/index.html
@@ -90,40 +90,6 @@
       </div>
     </section>
 
-    <!-- Projects Section -->
-    <section id="projects" class="projects">
-      <h2>Our Projects</h2>
-      <div class="project-grid">
-        <!-- Project Card -->
-        <div class="project-card">
-          <img src="images/java.jpeg" alt="Project Image">
-          <h3>JAVA</h3>
-          <!-- <p>This is a description of project 1.</p> -->
-          <a href="#" class="btn">Learn More</a>
-        </div>
-
-        <div class="project-card">
-          <img src="images/python.png" alt="Project Image">
-          <h3>Python</h3>
-          <!-- <p>This is a description of project 2.</p> -->
-          <a href="#" class="btn">Learn More</a>
-        </div>
-
-        <div class="project-card">
-          <img src="images/Machine Learning.png" alt="Project Image">
-          <h3>Machine Learning</h3>
-          <!-- <p>This is a description of project 3.</p> -->
-          <a href="#" class="btn">Learn More</a>
-        </div>
-        <div class="project-card">
-          <img src="images/AI.png" alt="Project Image">
-          <h3>AI</h3>
-          <!-- <p>This is a description of project 3.</p> -->
-          <a href="#" class="btn">Learn More</a>
-        </div>
-      </div>
-    </section>
-
     <!-- About Section -->
     <section id="about" class="about">
       <h2>About Us</h2>
@@ -306,13 +272,16 @@
         
         <div class="d-flex align-items-center" style="padding: 0; font-size: 24px;">
           <i class="material-icons" style="color: red;">add_location</i>
-          <a href="https://maps.google.com/maps/place//data=!4m2!3m1!1s0x3a358a7e24e99207:0x73399eed322f86ec?entry=s&sa=X&ved=1t:8290&hl=en-GB&ictx=111" target="_blank" style="margin: 0; margin-left: 5px; font-size: 16px; text-decoration: none;">
-            Office Address
+          <a href="https://maps.google.com/maps/place//data=!4m2!3m1!1s0x3a358a7e24e99207:0x73399eed322f86ec?entry=s&sa=X&ved=1t:8290&hl=en-GB&ictx=111"
+            target="_blank"
+            rel="noopener noreferrer"
+            style="margin: 0; margin-left: 5px; font-size: 16px; text-decoration: none;">
+              Office Address
           </a>
         </div>
         
         <p>Phone: +91 9676498284</p>
-        <p>Email: prakashreddy087@gmail.com</p>
+        <p>Email: svndtechnologies@gmail.com</p>
         <!-- <div class="social-links">
           <a href="#"><img src="https://via.placeholder.com/20x20" alt="Facebook"></a>
           <a href="#"><img src="https://via.placeholder.com/20x20" alt="Instagram"></a>
