--- a/index.html
+++ b/index.html
@@ -344,17 +344,25 @@
         <h3>Contact</h3>
         
         <div class="d-flex align-items-center" style="padding: 0; font-size: 24px;">
-          <i class="material-icons" style="color: red;">add_location</i>
+          <img src="images/icons/locationIcon.png" alt="Email Icon" style="width: 20px; height: 20px;" />
           <a href="https://maps.google.com/maps/place//data=!4m2!3m1!1s0x3a358a7e24e99207:0x73399eed322f86ec?entry=s&sa=X&ved=1t:8290&hl=en-GB&ictx=111"
             target="_blank"
             rel="noopener noreferrer"
-            style="margin: 0; margin-left: 5px; font-size: 16px; text-decoration: none;">
+            style="margin: 0; margin-left: 5px; font-size: 16px; text-decoration: none; padding-left: 1vw;">
               Office Address
           </a>
         </div>
         
-        <p>Phone: +91 9676498284</p>
-        <p>Email: svndtechnologies@gmail.com</p>
+        <div style="display: flex; align-items: center; padding: 0; font-size: 24px; padding-top: 3vh;">
+          <img src="images/icons/callIcon.png" alt="Email Icon" style="width: 20px; height: 20px;" />
+          <p style="margin: 0; padding-left: 1vw;">+91 9676498284</p>
+        </div>
+
+        <!-- <p>Email: svndtechnologies@gmail.com</p> -->
+        <div style="display: flex; align-items: center; padding: 0; font-size: 24px; padding-top: 3vh;">
+          <img src="images/icons/mailIcon.png" alt="Email Icon" style="width: 20px; height: 20px;" />
+          <p style="margin: 0; padding-left: 1vw;">svndtechnologies@gmail.com</p>
+        </div>
         <!-- <div class="social-links">
           <a href="#"><img src="https://via.placeholder.com/20x20" alt="Facebook"></a>
           <a href="#"><img src="https://via.placeholder.com/20x20" alt="Instagram"></a>
