update maps, ph number, made banner static.

--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
         
         <div class="d-flex align-items-center" style="padding: 0; font-size: 24px;">
           <img src="images/icons/locationIcon.png" alt="Email Icon" style="width: 20px; height: 20px;" />
-          <a href="https://maps.google.com/maps/place//data=!4m2!3m1!1s0x3a358a7e24e99207:0x73399eed322f86ec?entry=s&sa=X&ved=1t:8290&hl=en-GB&ictx=111"
+          <a href="https://maps.app.goo.gl/pdEthabfpMQxvADQ8"
             target="_blank"
             rel="noopener noreferrer"
             style="margin: 0; margin-left: 5px; font-size: 16px; text-decoration: none; padding-left: 1vw;">
@@ -409,7 +409,7 @@
         
         <div style="display: flex; align-items: center; padding: 0; font-size: 24px; padding-top: 3vh;">
           <img src="images/icons/callIcon.png" alt="Email Icon" style="width: 20px; height: 20px;" />
-          <p style="margin: 0; padding-left: 1vw;">+91 9676498284</p>
+          <p style="margin: 0; padding-left: 1vw;">9398014807, 9494662420</p>
         </div>
 
         <!-- <p>Email: svndtechnologies@gmail.com</p> -->
